<resources>
    <string name="app_name">eCommerce App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="sale">Sale</string>
    <string name="filter">Filter</string>
    <string name="my_account">My Account</string>
    <string name="cart">Cart</string>
    <string name="notifications">Notifications</string>
    <string name="share_app">Share App</string>
    <string name="info">Info</string>
    <string name="social">Social</string>
    <string name="contact_us">Contact Us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>